--- a/src/example-ui.html
+++ b/src/example-ui.html
@@ -152,17 +152,27 @@ input[type="file"] {
 .css-lighting::before, .css-lighting::after { content: ''; position: absolute; inset: 0; pointer-events: none; }
 .css-lighting::before {
   /* Fixed highlight gradient with hard transitions (specular bands), masked by roughness-derived spec mask */
-  background: repeating-linear-gradient(
-    var(--light-angle, 35deg),
-    var(--highlight-color, #ffffff) 0,
-    var(--highlight-color, #ffffff) var(--band-width, 10px),
-    transparent var(--band-width, 10px),
-    transparent calc(var(--band-width, 10px) + var(--band-gap, 40px))
-  );
+  background: 
+    /* Primary bands */
+    repeating-linear-gradient(
+      var(--light-angle, 35deg),
+      var(--highlight-color, #ffffff) 0,
+      var(--highlight-color, #ffffff) var(--band-width, 10px),
+      transparent var(--band-width, 10px),
+      transparent calc(var(--band-width, 10px) + var(--band-gap, 40px))
+    ),
+    /* Secondary subtle bands with phase offset */
+    repeating-linear-gradient(
+      calc(var(--light-angle, 35deg) + var(--band-phase, 8deg)),
+      var(--highlight-color-weak, rgba(255,255,255,0.35)) 0,
+      var(--highlight-color-weak, rgba(255,255,255,0.35)) var(--band-width2, 6px),
+      transparent var(--band-width2, 6px),
+      transparent calc(var(--band-width2, 6px) + var(--band-gap2, 30px))
+    );
   /* Make lighting fixed to viewport so scroll changes interaction */
   background-attachment: fixed;
-  /* Show highlights as opaque white (masked) */
-  mix-blend-mode: normal;
+  /* Blend mode configurable via dropdown */
+  mix-blend-mode: var(--blend-mode, normal);
   opacity: var(--highlight-alpha, 0.75);
   /* Use generated specularity mask (via Roughness). Accept full shorthand (image pos/size/repeat). */
   -webkit-mask: var(--spec-mask);
@@ -177,8 +187,8 @@ input[type="file"] {
     rgba(0,0,0, 0.0) 60%
   );
   background-attachment: fixed;
-  /* Show shadows as opaque black (masked) */
-  mix-blend-mode: normal;
+  /* Blend mode configurable via dropdown */
+  mix-blend-mode: var(--blend-mode, normal);
   opacity: var(--shadow-alpha, 0.35);
   -webkit-mask: var(--shadow-mask, var(--spec-mask));
   mask: var(--shadow-mask, var(--spec-mask));
@@ -857,6 +867,24 @@ input:checked + .slider:before {
           </div>
 
           <div class="control-row" style="margin-top:6px;">
+            <label for="blendModeSelect">Blend mode:</label>
+            <select id="blendModeSelect" style="width:100%;">
+              <option value="normal" selected>normal</option>
+              <option value="screen">screen</option>
+              <option value="multiply">multiply</option>
+              <option value="overlay">overlay</option>
+              <option value="soft-light">soft-light</option>
+              <option value="hard-light">hard-light</option>
+              <option value="color-dodge">color-dodge</option>
+              <option value="color-burn">color-burn</option>
+              <option value="lighten">lighten</option>
+              <option value="darken">darken</option>
+              <option value="difference">difference</option>
+              <option value="exclusion">exclusion</option>
+            </select>
+          </div>
+
+          <div class="control-row" style="margin-top:6px;">
             <label>
               <input type="checkbox" id="showMaskCheckbox">
               Show mask only (roughness)
@@ -1294,6 +1322,7 @@ input:checked + .slider:before {
                 const bandWidthSlider = document.getElementById('bandWidthSlider');
                 const bandWidthValue = document.getElementById('bandWidthValue');
                 const lightingPreviewMode = document.getElementById('lightingPreviewMode');
+                const blendModeSelect = document.getElementById('blendModeSelect');
                 const previewEl = document.getElementById('gradientPreview');
                 const badgeAngle = document.getElementById('badgeAngle');
                 const badgeHighlight = document.getElementById('badgeHighlight');
@@ -1337,6 +1366,15 @@ input:checked + .slider:before {
                     const updateColor = () => {
                         const val = colorPicker.value || '#ffffff';
                         previewEl.style.setProperty('--highlight-color', val);
+                        // Derive a weaker color with alpha for secondary band layer
+                        try {
+                            const hex = val.replace('#','');
+                            const r = parseInt(hex.substring(0,2),16);
+                            const g = parseInt(hex.substring(2,4),16);
+                            const b = parseInt(hex.substring(4,6),16);
+                            const weak = `rgba(${r}, ${g}, ${b}, 0.35)`;
+                            previewEl.style.setProperty('--highlight-color-weak', weak);
+                        } catch (_) {}
                     };
                     colorPicker.addEventListener('input', updateColor);
                     updateColor();
@@ -1371,6 +1409,16 @@ input:checked + .slider:before {
                     };
                     lightingPreviewMode.addEventListener('change', applyMode);
                     applyMode();
+                }
+
+                // Blend mode control
+                if (blendModeSelect && previewEl) {
+                    const applyBlend = () => {
+                        const mode = blendModeSelect.value || 'normal';
+                        previewEl.style.setProperty('--blend-mode', mode);
+                    };
+                    blendModeSelect.addEventListener('change', applyBlend);
+                    applyBlend();
                 }
                 const specDl = document.getElementById('specDownloadBtn');
                 if (specDl) specDl.addEventListener('click', () => this.downloadMapCSS('specular'));
